quick z-index fix

--- a/site/web/app/themes/miami-rising/resources/assets/styles/layouts/_front.scss
+++ b/site/web/app/themes/miami-rising/resources/assets/styles/layouts/_front.scss
@@ -49,6 +49,7 @@
 }
 
 .banner-header {
+  position:relative;
   z-index:10;
   width:100%;
   padding-top: 5rem;
